--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,10 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>fi.methics.keycloak.laverca</groupId>
   <version>1.0.0</version>
+  <properties>
+    <maven.compiler.source>17</maven.compiler.source>
+    <maven.compiler.target>17</maven.compiler.target>
+  </properties>
 
   <artifactId>keycloak-laverca</artifactId>
   <packaging>jar</packaging>
@@ -27,28 +31,28 @@
     <dependency>
       <groupId>org.keycloak</groupId>
       <artifactId>keycloak-server-spi-private</artifactId>
-      <version>22.0.1</version>
+      <version>22.0.3</version>
       <scope>import</scope>
     </dependency>
 
     <dependency>
       <groupId>org.keycloak</groupId>
       <artifactId>keycloak-server-spi</artifactId>
-      <version>22.0.1</version>
+      <version>22.0.3</version>
       <scope>provided</scope>
     </dependency>
 
     <dependency>
       <groupId>org.keycloak</groupId>
       <artifactId>keycloak-core</artifactId>
-      <version>19.0.3</version>
+      <version>22.0.3</version>
       <scope>provided</scope>
     </dependency>
 
     <dependency>
       <groupId>jakarta.platform</groupId>
       <artifactId>jakarta.jakartaee-api</artifactId>
-      <version>9.0.0</version>
+      <version>10.0.0</version>
       <scope>provided</scope>
     </dependency>
 
@@ -210,14 +214,13 @@
       <version>1.1.7</version>
       <scope>compile</scope>
     </dependency>
-
     <dependency>
       <groupId>laverca-rest</groupId>
       <artifactId>laverca-rest</artifactId>
       <version>1.1.0</version>
-      <scope>compile</scope>
+      <scope>system</scope>
+      <systemPath>${project.basedir}/lib/laverca-rest-1.1.0.jar</systemPath>
     </dependency>
-
   </dependencies>
 
   <build>
