--- a/pom.xml
+++ b/pom.xml
@@ -228,6 +228,12 @@
       <scope>system</scope>
       <systemPath>${project.basedir}/lib/laverca-rest-1.1.0.jar</systemPath>
     </dependency>
+    <dependency>
+      <groupId>org.jboss.logging</groupId>
+      <artifactId>jboss-logging</artifactId>
+      <version>3.5.3.Final</version>
+      <scope>provided</scope>
+    </dependency>
   </dependencies>
 
   <build>
